--- a/1_keras_custom_classifier_with_transfer_learning_10_epochs.ipynb
+++ b/1_keras_custom_classifier_with_transfer_learning_10_epochs.ipynb
@@ -1,6 +1,16 @@
 {
  "cells": [
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "**1_keras_custom_classifier_with_transfer_learning_100_epochs.ipynb**\n",
+    "This version runs the model 100 epochs on the hands data which is sourced from my google drive."
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {
     "colab_type": "text",
@@ -788,7 +798,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.10"
+   "version": "3.8.3"
   },
   "toc": {
    "base_numbering": 1,
